--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ PORT=
 OPENAI_API_KEY=
 
 # The LLM you want to use for summaries and contextual embeddings
-# Generally this is a very cheap and fast LLM like gpt-4.1-nano
+# Generally this is a very cheap and fast LLM like gpt-4o-mini
+# This is used for the new index_markdown_file tool and contextual embeddings
 MODEL_CHOICE=
 
 # RAG strategies - set these to "true" or "false" (default to "false")
