Remove hallucination detection references

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ USE_AGENTIC_RAG=false
 # USE_RERANKING: Applies cross-encoder reranking to improve search result relevance
 USE_RERANKING=false
 
-# USE_KNOWLEDGE_GRAPH: Enables AI hallucination detection and repository parsing tools using Neo4j
+# USE_KNOWLEDGE_GRAPH: Enables knowledge graph validation tools using Neo4j
 # If you set this to true, you must also set the Neo4j environment variables below.
 USE_KNOWLEDGE_GRAPH=false
 
@@ -45,7 +45,7 @@ SUPABASE_URL=
 SUPABASE_SERVICE_KEY=
 
 # Neo4j Configuration for Knowledge Graph Tools
-# These are required for the AI hallucination detection and repository parsing tools
+# These are required for the knowledge graph validation tools
 # Leave empty to disable knowledge graph functionality
 
 # Neo4j connection URI - use bolt://localhost:7687 for local, neo4j:// for cloud instances
