Refactor: Rebrand MCP server from Crawl4AI RAG to Sentinel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "crawl4ai-mcp"
+name = "sentinel-mcp"
 version = "0.1.0"
-description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
+description = "Sentinel - Advanced Web Intelligence MCP Server"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
